--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,152 @@
-body {
+html, body {
+  box-sizing: border-box;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  font-family: 'Montserrat', sans-serif;
+  background-color: #FFF8DC;
+}
+
+/* NAVBAR */
+nav {
+  background-color: #f55a5a;
+  color: #ffffff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0.8em 0;
+}
+
+nav p {
+  font-family: 'Bree Serif', serif;
+  font-size: 1.25rem;
+  font-weight: 500;
+  letter-spacing: 0.08em;
+  display: flex;
+  align-items: center;
+  margin: 0;
+}
+
+nav .logo {
+  margin-right: 0.4em;
+}
+
+/* CARDS SECTION */
+.cards {
+  max-width: 900px;
+  margin: 3em auto;
+  padding: 2em;
+  border-radius: 8px;
+  background-color: #FFFFF0;
+}
+
+.card {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  gap: 1.5em;
+}
+
+.card+.card {
+  margin-top: 2.5em;
+}
+
+.card-image img {
+  border-radius: 8px;
+  width: 100%;
+}
+
+.card-image {
+  grid-column: 1/3;
+  align-self: start;
+}
+
+.card-content {
+  grid-column: 3/6;
+  padding: 1em 1em 1em 0;
+}
+
+.card-content .top {
+  font-size: 0.64rem;
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.card-content .top span:first-child {
+  display: flex;
+  align-items: center;
+}
+
+.card-content .top img {
+  width: 30px;
+}
+
+.card-content .location {
+  color: #2b2831;
+  font-weight: 500;
+  letter-spacing: 0.17em;
+  text-transform: uppercase;
+  align-self: center;
+}
+
+.card-content .google-maps-link {
+  color: #918e9b;
+  font-weight: 300;
+  text-transform: uppercase;
+}
+.card-content .title,
+.card-content .date,
+.card-content .description {
+  color: #2b283a;
+}
+
+.card-content .title {
+  font-size: 1.56rem;
+  margin-top: 0;
+  margin-bottom: 1em;
+}
+
+.card-content .date {
+  font-weight: 700;
+}
+
+.card-content .date,
+.card-content .description {
+  font-size: 0.75rem;
+}
+
+.card-content .description {
+  line-height: 1.5em;
+}
+
+@media screen and (max-width: 768px) {
+  .card {
+      display: grid;
+      grid-template-columns: min-content;
+      gap: 0;
+    }
+
+    .card-image {
+      grid-row: 1/2;
+    }
+
+    .card-content {
+      grid-column: 2/3;
+      padding: 1em 0;
+    }
+
+    .card + .card {
+      margin-top: 1em;
+    }
+
+    .cards {
+      margin: 1.5em auto 0;
+    }
+
+    .card-content .title {
+      font-size: 1.40rem;
+    }
 }
